changed default qr code to my  new linkedin url

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="qrcode.js"></script>
 </head>
 <body>
-    <input id="text" type="text" value="https://www.linkedin.com/in/evan-erickson-99607bb2/" style="width:80%" /><br />
+    <input id="text" type="text" value="https://www.linkedin.com/in/evanserickson/" style="width:80%" /><br />
     <div id="qrcode" style="width:100px; height:100px; margin-top:15px; margin-left: 15px;"></div>
     
     <script type="text/javascript">
