--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     <h1>QR Code Generator</h1>
 
 
-    <p>QR codes are huge in China. When I was there, people used QR codes for everything, from paying for food at a restaurant, to posting them on flyers for upcoming shows. I believe that QR codes will gain popularity in the United States so I wanted to create a way for the common person to get involved.
-        <br>
-        <br>
-        Using the latest Javascript available, along with Canvas, I successfully created an algorithm that will generate a QR code for any url. The hardest part of the project was dealing with all the variables and “drawing” the QR code. Luckily, my friend David Shim was there to help me.</p>
+    <p>QR codes are huge in China. When I was there, people used QR codes for everything, from paying for food at a restaurant, to posting them on flyers for upcoming shows. I believe that QR codes will gain popularity in the United States so I wanted to create a way for the common person to get involved.</p>
+    <p>
+        Using the latest Javascript available, along with Canvas, I successfully created an algorithm that will generate a QR code for any url. The hardest part of the project was dealing with all the variables and “drawing” the QR code. Luckily, my friend David Shim was there to help me.
+    </p>
+        <p>Instructions: Enter your url below and then hit enter. You can then right click on it and "save image as". </p>
         <label>Enter your url:</label>
         <br>
     <input id="text" type="text" value="https://www.linkedin.com/in/evanserickson/" style="width:80%" /><br />
